2016-10-26  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/appsettings/AppSettings.java (openPreferences): Open a preferences file does not delete anymore defined preferences and defaults